force-app/main/default/objects/FPayment_Plan__c/FPayment_Plan__c.object-meta.xml
<CustomObject>
    <label>FPayment Plan</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>FPayment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FPayment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>