force-app/main/default/objects/FPayment_Plan__c/fields/F_Currency__c.field-meta.xml
<CustomField>
    <fullName>F_Currency__c</fullName>
    <label>F Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>Dollar</fullName>
            </value>
            <value>
                <fullName>Lira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>