force-app/main/default/objects/FPayment_Plan__c/fields/F_Day_Check__c.field-meta.xml
<CustomField>
    <fullName>F_Day_Check__c</fullName>
    <formula>DAY( TODAY() )  = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F Day Check</label>
    <type>Checkbox</type>
</CustomField>