force-app/main/default/objects/FPayment_Plan__c/fields/F_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>F_Installment_Amount__c</fullName>
    <label>F Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>