force-app/main/default/objects/FPayment_Plan__c/fields/F_Payment_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>F_Payment_Plan_Summary__c</fullName>
    <label>F Payment Plan Summary</label>
    <type>TextArea</type>
</CustomField>