force-app/main/default/objects/FPayment_Plan__c/fields/F_Student_Details__c.field-meta.xml
<CustomField>
    <fullName>F_Student_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F Student Details</label>
    <referenceTo>FStudent__c</referenceTo>
    <relationshipLabel>FPayment Plans</relationshipLabel>
    <relationshipName>FPayment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>