force-app/main/default/objects/FPayment_Plan__c/fields/F_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>F_Total_Price__c</fullName>
    <label>F Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>